force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>false</default><label>Active</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>