force-app/main/default/objects/Account/fields/Bank_IFSC__c.field-meta.xml
<CustomField>
    <fullName>Bank_IFSC__c</fullName>
    <label>Bank IFSC</label>
    <length>11</length>
    <type>Text</type>
</CustomField>