force-app/main/default/objects/Account/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <label>Beat</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Beat__c</referenceTo>
    <relationshipName>Account_Beats</relationshipName>
    <type>Lookup</type>
</CustomField>