force-app/main/default/objects/Account/fields/City_Master__c.field-meta.xml
<CustomField>
    <fullName>City_Master__c</fullName>
    <label>City (Master)</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>City_Tier__c</referenceTo>
    <relationshipName>Account_Cities</relationshipName>
    <type>Lookup</type>
</CustomField>