force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>GT</fullName><default>false</default><label>GT</label></value>
            <value><fullName>MT</fullName><default>false</default><label>MT</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>