force-app/main/default/objects/Account/fields/Custom_Tags__c.field-meta.xml
<CustomField>
    <fullName>Custom_Tags__c</fullName>
    <label>Custom Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>