force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Distributor</fullName><default>false</default><label>Distributor</label></value>
            <value><fullName>Super Stockist</fullName><default>false</default><label>Super Stockist</label></value>
            <value><fullName>Sub Distributor</fullName><default>false</default><label>Sub Distributor</label></value>
            <value><fullName>Outlet</fullName><default>false</default><label>Outlet</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>