force-app/main/default/objects/Account/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <label>Delivering Plant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>