force-app/main/default/objects/Account/fields/Distributor_Grade__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Grade__c</fullName>
    <label>Distributor Grade</label>
    <length>40</length>
    <type>Text</type>
</CustomField>