force-app/main/default/objects/Account/fields/ERP_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>ERP_SAP_Code__c</fullName>
    <label>ERP / SAP Code</label>
    <externalId>true</externalId>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>