force-app/main/default/objects/Account/fields/FA_Bizom_GUID__c.field-meta.xml
<CustomField>
    <fullName>FA_Bizom_GUID__c</fullName>
    <label>FA / Bizom GUID</label>
    <externalId>true</externalId>
    <length>60</length>
    <type>Text</type>
</CustomField>