force-app/main/default/objects/Account/fields/FSSAI_Expiry__c.field-meta.xml
<CustomField>
    <fullName>FSSAI_Expiry__c</fullName>
    <label>FSSAI Expiry</label>
    <type>Date</type>
</CustomField>