force-app/main/default/objects/Account/fields/FSSAI_No__c.field-meta.xml
<CustomField>
    <fullName>FSSAI_No__c</fullName>
    <label>FSSAI No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>