force-app/main/default/objects/Account/fields/Is_Focused_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Is_Focused_Outlet__c</fullName>
    <label>Is Focused Outlet</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>