force-app/main/default/objects/Account/fields/Is_KYC_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_KYC_Done__c</fullName>
    <label>Is KYC Done</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>