force-app/main/default/objects/Account/fields/Owner_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Owner_Contact_No__c</fullName>
    <label>Owner Contact No</label>
    <type>Phone</type>
</CustomField>