force-app/main/default/objects/Account/fields/Phone_Not_Verified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Phone_Not_Verified_Reason__c</fullName>
    <label>Phone Not-Verified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Customer denied</fullName><default>false</default><label>Customer denied</label></value>
            <value><fullName>OTP not received</fullName><default>false</default><label>OTP not received</label></value>
            <value><fullName>Offline</fullName><default>false</default><label>Offline</label></value>
            <value><fullName>Number not available</fullName><default>false</default><label>Number not available</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>