force-app/main/default/objects/Account/fields/Phone_Verified_OTP__c.field-meta.xml
<CustomField>
    <fullName>Phone_Verified_OTP__c</fullName>
    <label>Phone Verified (OTP)</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>