force-app/main/default/objects/Account/fields/Price_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Name__c</fullName>
    <label>Price List</label>
    <length>80</length>
    <type>Text</type>
</CustomField>