force-app/main/default/objects/Account/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>